--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@nx-net/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
   "private": true,
   "dependencies": {
     "next": "14.0.4",
@@ -11,16 +13,26 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "18.0.8",
     "@nx/eslint": "18.0.8",
     "@nx/eslint-plugin": "18.0.8",
     "@nx/jest": "18.0.8",
     "@nx/js": "18.0.8",
     "@nx/next": "18.0.8",
+    "@nx/react": "18.0.8",
+    "@nx/storybook": "^18.0.8",
+    "@nx/vite": "18.0.8",
+    "@nx/web": "18.0.8",
     "@nx/workspace": "18.0.8",
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/core-server": "7.6.17",
+    "@storybook/react-vite": "7.6.17",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
@@ -37,12 +49,16 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "lint-staged": "^15.2.2",
     "nx": "18.0.8",
     "prettier": "^2.6.2",
+    "storybook": "7.6.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "vite": "~5.0.0"
   }
 }
