--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.18",
     "next": "14.0.4",
+    "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
